Update the document and add the install_to_loal_repo.cmd